fix align bug

--- a/personal/src/components/Experience/card.scss
+++ b/personal/src/components/Experience/card.scss
@@ -1,7 +1,17 @@
 @import './../../Styles/variables.scss';
 
+.wrapper{
+    display: flex;
+    align-items: center!important;
+    justify-content: center!important;
+}
+
 .card{
-    width: 26rem;   
+    
+    width: 20rem;
+    @include breakpoint(md) {
+        width: 26rem;
+    }   
 }
 .card:hover{
     box-shadow: 5px 10px 20px 1px rgba(0, 0, 0, 0.253)!important;
